TList interface implemented

--- a/mp2-lab5-polinom/mp2-lab5-polinom.vcxproj
+++ b/mp2-lab5-polinom/mp2-lab5-polinom.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Polinom.h" />
     <ClInclude Include="TList.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
