--- a/mp2-lab5-polinom/mp2-lab5-polinom.vcxproj.filters
+++ b/mp2-lab5-polinom/mp2-lab5-polinom.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClInclude Include="TList.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Polinom.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
