--- a/mp2-lab5-polinom/mp2-lab5-polinom.vcxproj
+++ b/mp2-lab5-polinom/mp2-lab5-polinom.vcxproj
@@ -22,6 +22,9 @@
     <ClInclude Include="Polinom.h" />
     <ClInclude Include="TList.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Polinom.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
