--- a/mp2-lab5-polinom/mp2-lab5-polinom.vcxproj.filters
+++ b/mp2-lab5-polinom/mp2-lab5-polinom.vcxproj.filters
@@ -22,4 +22,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Polinom.cpp">
+      <Filter>Файлы ресурсов</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
