--- a/gtest/TestStack.vcxproj.filters
+++ b/gtest/TestStack.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="test_main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_tlist.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
