all methods released!

--- a/gtest/TestStack.vcxproj
+++ b/gtest/TestStack.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="gtest-all.cc" />
     <ClCompile Include="test_main.cpp" />
+    <ClCompile Include="test_polinom.cpp" />
     <ClCompile Include="test_tlist.cpp" />
   </ItemGroup>
   <ItemGroup>
