--- a/gtest/TestStack.vcxproj.filters
+++ b/gtest/TestStack.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="test_tlist.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_polinom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
