Model header added

--- a/mp2-lab5-polinom/mp2-lab5-polinom.vcxproj.filters
+++ b/mp2-lab5-polinom/mp2-lab5-polinom.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="Polinom.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Файлы ресурсов</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
