--- a/mp2-lab5-polinom/mp2-lab5-polinom.vcxproj
+++ b/mp2-lab5-polinom/mp2-lab5-polinom.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="TList.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Polinom.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -49,7 +50,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
