--- a/graphics/CppWinForm1.vcxproj.filters
+++ b/graphics/CppWinForm1.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Exceptions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
