--- a/graphics/CppWinForm1.vcxproj.filters
+++ b/graphics/CppWinForm1.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Model.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\mp2-lab5-polinom\Polinom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
@@ -30,6 +33,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Exceptions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mp2-lab5-polinom\Polinom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
